# Opendbpy

./: README.md
.github/: pull.yml
.github/workflows/: test.yml
src/OpenDB/: CMakeLists.txt
src/OpenDB/src/swig/common/: CMakeLists.txt  polygon.i
src/OpenDB/src/swig/python/: CMakeLists.txt  dbenums.i  opendbpy.i
src/OpenDB/src/utl/: CMakeLists.txt  include  src
